FIx text alignment

--- a/public/style.css
+++ b/public/style.css
@@ -94,10 +94,11 @@ body{
 
 }
 
-.modern-platfom {
+.modern-platform {
   font-family: var(--overpass);
   font-weight:  600;
   font-size: 2rem;
+  text-align: center;
 }
 
 .audience {
